--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT = 3710
-
-
+DB_CONNECTION = mongodb+srv://yosialukumai:ipHdAIdZwFKvgojs@cluster0.su3pixj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
